# DmNKVM

./: .gitignore  CMakeLists.txt  DmNKVM.cpp  DmNKVM.hpp  DmNSTD.cpp  LICENSE  TODO.md  main.cpp  main.off
DmNKVM/: CMakeLists.txt
DmNKVM/DmNKVM/: CMakeLists.txt  DmNKVM.cpp  DmNKVM.hpp  main.cpp
DmNKVMCore/: CMakeLists.txt
DmNKVMCore/DmNKVMCore/: CMakeLists.txt  DmNKVMCore.cpp  DmNKVMCore.h
core/: KVMBC.hpp  KVMCall.hpp  KVMClassLoader.hpp  KVMConfig.hpp  KVMESC.hpp  KVMError.hpp  KVMHeap.hpp  KVMJP.hpp  KVMLLT.hpp  KVMNM.hpp  KVMNameble.hpp  KVMNetwork.hpp  KVMObj.hpp  KVMProcess.hpp  KVMSR.hpp  KVMThread.hpp  KVMTypes.hpp  KVMUtils.hpp  KVMVM.hpp  SDmNL.hpp  info.md
doc/: info.md
include/: DmNKVM.hpp  DmNSTD.hpp  JavaParser.hpp  KVM.hpp  KVMAlloc.hpp  KVMCall.hpp  KVMClassLoader.hpp  KVMConfig.h  KVMConfig.hpp  KVMConstructors.hpp  KVMESC.hpp  KVMError.hpp  KVMGlobals.hpp  KVMHeap.hpp  KVMJP.hpp  KVMLLT.hpp  KVMModule.hpp  KVMNM.hpp  KVMNameble.hpp  KVMNamespace.hpp  KVMNetwork.hpp  KVMObj.hpp  KVMProcess.hpp  KVMSR.hpp  KVMThread.hpp  KVMThrowable.hpp  KVMTypes.hpp  KVMUtils.hpp  KVMVM.hpp  SDmNL.hpp  SDmNL.tpp  constructors.hpp  types.hpp
include/JavaParser/: KVMJPClass.hpp  KVMJPComm.h  KVMJPInstruction.hpp
run/: DmNKVM.exe.stackdump
src/: DmNKVM.cpp  DmNSTD.cpp  JavaParser.cpp  KVMAlloc.cpp  KVMConstructors.cpp  KVMHeap.cpp  KVMJP.cpp  KVMNameble.cpp  KVMNetwork.cpp  KVMSR.cpp  KVMTypes.cpp  SDmNL.cpp  types.cpp
variants/compiler/Cygwin/: DmNPlatformConfig.hpp
variants/compiler/MSVC/: DmNPlatformConfig.h  DmNPlatformConfig.hpp
variants/compiler/MinGW/: DmNPlatformConfig.hpp
variants/compiler/MinGW/__internal/thread/: README.md  mingw.future.h  mingw.mutex.h  mingw.shared_mutex.h  mingw.thread.h
variants/compiler/other/: DmNPlatformConfig.h  DmNPlatformConfig.hpp
